// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`logo render custom class 1`] = `

<div>
  <div class="flex flex-row custom-class">
    <h1>
      <span class="text-2xl font-semibold leading-none pr-2 tracking-wide">
        vlt
      </span>
      <span class="text-2xl font-light leading-none text-zinc-500 tracking-wide">
        /vōlt/
      </span>
    </h1>
  </div>
</div>

`;

exports[`logo render default 1`] = `

<div>
  <div class="flex flex-row">
    <h1>
      <span class="text-2xl font-semibold leading-none pr-2 tracking-wide">
        vlt
      </span>
      <span class="text-2xl font-light leading-none text-zinc-500 tracking-wide">
        /vōlt/
      </span>
    </h1>
  </div>
</div>

`;
